# LanguageLearnApp

./: .env.example  .gitignore  CONTRIBUTING.md  Caddyfile  Dockerfile  NOTICE  README.md  docker-compose.prod.yml  docker-compose.yml  package.json  playwright.config.ts  pnpm-lock.yaml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  postCreate.sh  postStart.sh
.github/workflows/: certify.yml  client.yml  publish.yml  server.yml
api/v1/: openapi.json
client/: eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
client/e2e/: cefr-progress.spec.ts  (+4 more)
docs/: architecture.md
e2e/: auth.spec.ts  smoke.spec.ts
infra/: README.md  main.tf  outputs.tf  providers.tf  rotate-secrets.ps1  setup.ps1  terraform.tfvars  variables.tf
scripts/: WaitFor-PipelineRun.ps1  backup-entrypoint.sh  backup.sh  build.ps1  db-migrate.ps1  db-setup.sh  dev-client.ps1  dev-server.ps1  dev.ps1  entrypoint.sh  export-openapi.ps1  generate-types.ps1  install-client.sh  install-server.sh  lint.ps1  postCreate.sh  postStart.sh  test.ps1
server/: export_openapi.py  main.py  pyproject.toml
server/auth/: config.py  csrf.py  dependencies.py  email.py  passwords.py  schemas.py  tokens.py  webauthn_store.py
server/content/: import_service.py  schemas.py
server/content/schemas/: concept-file.schema.json  course.schema.json
server/db/: __init__.py  pool.py
server/db/queries/: auth_tokens.py  concepts.py  courses.py  exercises.py  passkeys.py  progress.py  reviews.py  users.py
server/grading/: normalizer.py  provider.py  schemas.py
server/migrations/: 001_enums_and_functions.yaml  001_initial_schema.json  002_tables.yaml  003_indexes.yaml  004_triggers.yaml  005_alter_users_verified.yaml  006_auth_tables.yaml  007_drop_exercise_unique.yaml  008_progress_summary.yaml  009_exercise_type_enum.yaml  010_concepts_rename.yaml  011_exercises_jsonb.yaml  012_exercise_concepts.yaml  013_progress_two_tracks.yaml  014_drop_source_target_text.yaml  015_new_exercise_model.yaml  016_migrate_exercise_data.yaml
server/routes/: auth.py  courses.py  exercises.py  passkeys.py  study.py
server/srs/: difficulty.py  mastery.py  prerequisite_cap.py  scheduler.py  schemas.py  session.py
server/tests/: __init__.py  conftest.py  test_health.py  test_openapi_spec.py
server/tests/auth/: test_csrf.py  test_dependencies.py  test_passwords.py  test_tokens.py  test_webauthn_store.py
server/tests/content/: test_import_service.py  test_schemas.py
server/tests/contracts/: conftest.py  test_auth_contract.py  test_courses_contract.py  test_exercises_contract.py  test_passkeys_contract.py  test_study_contract.py
server/tests/db/: test_auth_tokens.py  test_concepts.py  test_courses.py  test_exercises.py  test_passkeys.py  test_progress.py  test_reviews.py  test_users.py
server/tests/grading/: test_normalizer.py  test_provider.py
server/tests/integration/: test_30_day_simulation.py
server/tests/routes/: conftest.py  test_auth.py  test_courses.py  test_exercises.py  test_passkeys.py  test_protected.py  test_study.py
server/tests/srs/: test_difficulty.py  test_mastery.py  test_prerequisite_cap.py  test_scheduler.py  test_session.py
(+61 files in other folders)
